--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -18,26 +18,15 @@
 <h1>Version 0.6.1 (04/02/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Adds checkbook management.</li>
-  <li>Adds access to web resources (Yapbam site and Yapbam support page).</li>
-  <li>Improves launch speed (The launch don't wait anymore for the "new release 
-    check" to finish).</li>
-  <li>Improves the check for updates process (this check can now be interrupted 
-    if the connection takes too long).</li>
-  <li>Improves the account&nbsp;administration screen.</li>
-  <li>Improves integer field input (now only numerical characters can be typed 
+  <li>Adds an alert in the transactions panel when some periodical transactions have to be generated.</li></ul><h1>Older releases</h1>
+<h2>Version 0.6.0 (04/02/2010)</h2><ul><li>Adds checkbook management.</li><li>Adds access to web resources (Yapbam site and Yapbam support page).</li><li>Improves launch speed (The launch don't wait anymore for the "new release 
+    check" to finish).</li><li>Improves the check for updates process (this check can now be interrupted 
+    if the connection takes too long).</li><li>Improves the account&nbsp;administration screen.</li><li>Improves integer field input (now only numerical characters can be typed 
     in such fields and up and down arrows respectively increase or decrease the 
-    field value).</li>
-  <li>Simplifies account creation dialog. Users report that the ability to add 
-    payment modes in this screen was confusing.</li>
-  <li>Autoscrolls the balance history view to always have the selected date visible 
-    when this panel appears.</li>
-  <li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behavior 
-    when dates where entered using a 1 digit year format (for instance 03/20/9).</li>
-</ul>
-<hr>
-<h1>Older releases</h1>
-<h2>Version 0.6.0 (03/09/2010)</h2><ul><li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
+    field value).</li><li>Simplifies account creation dialog. Users report that the ability to add 
+    payment modes in this screen was confusing.</li><li>Autoscrolls the balance history view to always have the selected date visible 
+    when this panel appears.</li><li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behavior 
+    when dates where entered using a 1 digit year format (for instance 03/20/9).</li></ul><h2>Version 0.6.0 (03/09/2010)</h2><ul><li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
 bug in the transactions table. Sometimes transactions with
 subtransactions appeared with a complement that had an amount equals to
 zero</li></ul><h2>Version 0.5.4 (02/08/2010)</h2><ul><li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
