--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,28 +19,19 @@ color: #ff9900;
 <h1>Version 0.6.1 (02/04/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout de la gestion des chéquiers.</li>
-  <li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
-    de Yapbam et la page de support).</li>
-  <li>Améliore la vitesse de lancement (L'application démarre sans attendre la 
-    fin de la vérification de l'existence d'une nouvelle version).</li>
-  <li>Améliore le processus de recherche des mises à jour (La vérification peut-être 
-    interrompue si la connexion prend trop de temps).</li>
-  <li>Améliore l'écran d'administration des comptes.</li>
-  <li>Améliore la saisie des entiers (A présent seuls des caractères numériques 
-    peuvent être saisis et les flèches haute et basse augmentent ou diminuent 
-    la valeur contenue dans le champ).</li>
-  <li>Simplifie le dialogue de création de compte. Des utilisateurs ont rapporté 
-    que la possibilité de définir des modes dans cet écran était perturbant.</li>
-  <li>A l'arrivée dans l'historique du solde, positionne le graphique de 
-    façon à ce que la date sélectionnnée soit visible.</li>
-  <li><span class="bugFix">Correction d'un bug</span> : Yapbam avait un comportement 
-    étrange quand une date était saisie avec l'année sur un seul caractère (ex 
-    : 20/3/9). </li>
-</ul>
+  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques sont en attente de génération.</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.6.0 (09/03/2010)</h2>
+<h2>Version&nbsp;0.6.1 (02/04/2010)</h2><ul><li>Ajout de la gestion des chéquiers.</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
+    de Yapbam et la page de support).</li><li>Améliore la vitesse de lancement (L'application démarre sans attendre la 
+    fin de la vérification de l'existence d'une nouvelle version).</li><li>Améliore le processus de recherche des mises à jour (La vérification peut-être 
+    interrompue si la connexion prend trop de temps).</li><li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers (A présent seuls des caractères numériques 
+    peuvent être saisis et les flèches haute et basse augmentent ou diminuent 
+    la valeur contenue dans le champ).</li><li>Simplifie le dialogue de création de compte. Des utilisateurs ont rapporté 
+    que la possibilité de définir des modes dans cet écran était perturbant.</li><li>A l'arrivée dans l'historique du solde, positionne le graphique de 
+    façon à ce que la date sélectionnnée soit visible.</li><li><span class="bugFix">Correction d'un bug</span> : Yapbam avait un comportement 
+    étrange quand une date était saisie avec l'année sur un seul caractère (ex 
+    : 20/3/9).</li></ul><h2>Version&nbsp;0.6.0 (09/03/2010)</h2>
 <ul>
 <li>Ajoute la possibilité d'importer/exporter vers des fichiers
 texte.</li>
