--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,10 +16,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.2 (??/04/2010)</h1>
+<h1>Version 0.6.2 (09/04/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques sont en attente de génération.</li></ul>
+  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques sont en attente de génération.</li><li>Meilleure intégration à l'environnement Microsoft Windows (Ajout de l'application Yapbam.exe).</li></ul>
 <hr>
 <h1>Versions précédentes</h1>
 <h2>Version&nbsp;0.6.1 (02/04/2010)</h2><ul><li>Ajout de la gestion des chéquiers.</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
