--- a/Yapbam/Installation instructions.html
+++ b/Yapbam/Installation instructions.html
@@ -4,35 +4,39 @@
 
 </head>
 <body>
-<h1>Installation instructions </h1>
+<h1>How to install Yapbam ?&nbsp;</h1>
+<h2>Windows</h2>
 <ol>
-<li><strong>You need to have a java 5 (or more) runtime
+<li><strong>You need to have a java 6 (or more) runtime
 installed</strong>. <br>
-Under Windows, a simple way to have it is to download and install the
+The easiest way to have it is to download and install the
 package provided by Sun (<a href="http://java.sun.com/javase/downloads">http://java.sun.com/javase/downloads</a>).<br>
-<br>
-Under Linux, the best way is to use the package management tool.<br>
-For instance, for Ubuntu type the following command in a console window
-:<br>
-sudo apt-get install sun-java6-jre.</li>
-<!-- <p>If you installed OpenJDK, please see the <a
-href="openJDK.html">note for OpenJDK users</a>.&nbsp;</p>-->
-</ol>
-<ol>
-<li><strong>Copy the yapbam.jar file ... where you want
-on your hard disk</strong>.</li>
-<li><strong>Double-click on the yapbam.jar</strong>
-... it should launch YAPBAM<br>
+</li>
+<li><strong>Copy the content of this archive</strong> in a new
+folder on your hard disk.</li>
+<li>Double-click on the <strong>yapbam.exe</strong>
+application<br>
+Under other OS, double-click on the yapbam.jat file<br>
 It is possible that the OS launch another application ... for instance
 an archive manager. A right click "launch with Java SE" (the exact
-wording may depends on your environment), will solve the problem.<br>
-Note : It's ok, this is ugly !!! In a future release, I will probably
-try to solve this with a small piece of C code.</li>
+wording may depends on your environment), will solve the problem.</li>
 </ol>
-<h1>Uninstall YAPBAM</h1>
-<p>Delete yapbam.jar file and the hidden files .yapbam (which
-contains the yapbam startup state) and .yapbampref (it contains the
-preferences) ... and, if you really want ... your data files.</p>
+<h2>Linux and others</h2>
+<ol>
+<li><strong>You need to have a java 6 (or more) runtime
+installed</strong>.<br>Under Linux, the best way is to use the package management tool.<br>For instance, for Ubuntu type the following command in a console window
+:<br><span style="font-style: italic;">sudo apt-get install sun-java6-jre<br></span><small style="font-style: italic;">Note : You may also have openJDK already installed with your Linux
+distribution. Yapbam is, of course, compatible with this Java Virtual
+Machine.</small><br>For other OS, please refer to your OS documentation in order to known how to obtain a Java&nbsp;Runtime.<span style="font-style: italic;"></span></li><li><strong>Copy the content of this archive</strong> in a new
+folder on your hard disk</li><li>Double-click on the <strong>yapbam.jar</strong> file<br>
+It is possible that the OS launch another application ... for instance
+an archive manager. A right click "launch with Java SE" (the exact
+wording may depends on your environment), will solve the problem.</li>
+</ol><h1>How to update Yapbam ?</h1>
+<ol><li>Quit Yapbam.</li><li>Unzip the content of this archive
+into your Yapbam directory (the one you've created during the 
+installation).</li><li>Restart Yapbam.</li></ol><h1>How to uninstall YAPBAM ?</h1>
+<p>Delete the folder you've created during the installation ... and, if you really want ... your data files.</p>
 <hr>
-<p>Based on version 0.1.12</p>
+<p>Based on version 0.6.2</p>
 </body></html>
