--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,10 +15,10 @@
 
 </style></head>
 <body>
-<h1>Version 0.6.2 (04/??/2010)</h1>
+<h1>Version 0.6.2 (04/09/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li>Adds an alert in the transactions panel when some periodical transactions have to be generated.</li></ul><h1>Older releases</h1>
+  <li>Adds an alert in the transactions panel when some periodical transactions have to be generated.</li><li>Better integration with Microsoft Windows (introduces the Yapbam.exe application).</li></ul><h1>Older releases</h1>
 <h2>Version 0.6.1 (04/02/2010)</h2><ul><li>Adds checkbook management.</li><li>Adds access to web resources (Yapbam site and Yapbam support page).</li><li>Improves launch speed (The launch don't wait anymore for the "new release 
     check" to finish).</li><li>Improves the check for updates process (this check can now be interrupted 
     if the connection takes too long).</li><li>Improves the account&nbsp;administration screen.</li><li>Improves integer field input (now only numerical characters can be typed 
