--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,13 +16,24 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.2 (09/04/2010)</h1>
+<h1>Version 0.6.3 (??/04/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques sont en attente de génération.</li><li>Meilleure intégration à l'environnement Microsoft Windows (Ajout de l'application Yapbam.exe).</li></ul>
+  <li><span class="bugFix">Correction d'un bug : </span>La date s&eacute;lectionn&eacute;e 
+    dans l'onglet d'historique des soldes &eacute;taient fr&eacute;quemment remise 
+    &agrave; la date du jour.</li>
+</ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.6.1 (02/04/2010)</h2><ul><li>Ajout de la gestion des chéquiers.</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
+<h2>Version 0.6.2 (09/04/2010)</h2>
+<ul>
+  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques 
+    sont en attente de génération.</li>
+  <li>Meilleure intégration à l'environnement Microsoft Windows (Ajout de l'application 
+    Yapbam.exe).</li>
+</ul>
+<h2>Version&nbsp;0.6.1 (02/04/2010)</h2>
+<ul><li>Ajout de la gestion des chéquiers.</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
     de Yapbam et la page de support).</li><li>Améliore la vitesse de lancement (L'application démarre sans attendre la 
     fin de la vérification de l'existence d'une nouvelle version).</li><li>Améliore le processus de recherche des mises à jour (La vérification peut-être 
     interrompue si la connexion prend trop de temps).</li><li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers (A présent seuls des caractères numériques 
