--- a/Yapbam/src/localization/Installation instructions.html
+++ b/Yapbam/src/localization/Installation instructions.html
@@ -2,48 +2,60 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Installation instructions</title></head>
 <body>
-<h1>Installation instructions </h1>
+<h1>How to install Yapbam ?</h1>
+<h2>Windows OS:</h2>
 <ol>
-<li><strong>You need to have a java 6 (or more) runtime
-installed</strong>. <br>
-Under Windows, a simple way to have it is to download and install the
-package provided by Sun (<a href="http://java.sun.com/javase/downloads">http://java.sun.com/javase/downloads</a>).<br>
-<br>
-Under Linux, the best way is to use the package management tool.<br>
-For instance, for Ubuntu type the following command in a console window
-:<br>
-sudo apt-get install sun-java6-jre.</li>
-<p>You may also have openJDK already installed with your Linux
-distribution. Yapbam is, of course, compatible with this Java Virtual
-Machine.</p>
 <li><strong>Extract the content of yapbam.zip file ... to
-a new created folder where you want
+a new&nbsp;folder where you want
+on your hard disk, or on an USB key</strong>.</li>
+<li><strong>Double-click on the yapbam application</strong>.<br>
+If a window appears with the message "This application requires a Java
+Runtime Environment 1.6.0", it means you have to install the Java
+Runtime Environment.<br>
+The simplest way to do it is to click the ok button: You will be
+redirected to the Java download page. Download&nbsp;and install the
+suggested
+package. Then launch Yapbam again.<br>
+If you can't access to the Java download page (if you're currently not
+connected to the Internet), you can get it later at this
+address:&nbsp;<a href="http://java.com/download">http://java.com/download</a>.</li>
+</ol>
+<h2>Others OS:</h2>
+<ol>
+<li><strong>Extract the content of yapbam.zip file ...
+to
+a new&nbsp;folder where you want
 on your hard disk, or on an USB key</strong>.</li>
 <li><strong>Double-click on the yapbam.jar</strong>
-... it should launch YAPBAM<br>
-It is possible that the OS launch another application ... for instance
-an archive manager. A right click "launch with Java SE" (the exact
-wording may depends on your environment), will solve the problem.<br>If you're on windows, double click on yapbam.bat, it should solve the problem.<br>
-Note : It's ok, this is ugly !!! In a future release, I will probably
-try to solve this with a small piece of C code.</li>
+file ... it should launch YAPBAM</li>
+<li><strong>What to do
+if it fails ?</strong>
+<ol>
+<li>Ensure that you have Java installed on your computer.<br>
+Under linux a simple way is to launch a terminal then type the command:<br>
+<pre> java -version</pre>
+If the command fails or if it reports a version older than 1.6.0,
+please install the latest java version with the command:<br>
+<pre>sudo apt-get install sun-java6-jre.</pre>
+</li>
+<li>It is possible that the OS launch another application
+... for instance
+an archive manager. A right click may show a "launch with Java SE" (the exact
+wording may depends on your environment) menu that will solve the problem.</li>
+</ol></li>
 </ol>
-<h1>Upgrading Yapbam</h1>
+<h1>How to upgrade Yapbam ?</h1>
 <ol>
 <li>Quit Yapbam.</li>
 <li>Extract the content of the zip file to the Yapbam folder
 (the one you've create when you installed Yapbam).</li>
 <li>Restart Yapbam.</li>
 </ol>
-<h1>Uninstall Yapbam</h1>
+<h1>How to uninstall Yapbam ?</h1>
 <ul>
-<li>Delete the Yapbam folder.<br>
-Be aware that Yapbam maintains two hidden files in its folder
-:&nbsp;.yapbam (which
-contains the yapbam startup state) and .yapbampref (it contains the
-preferences). Deleting only the files you see in the folder will be not
-enough, you have to delete the folder.</li>
+<li>Delete the Yapbam folder.<br></li>
 <li> ... and, if you really want ... your data files.</li>
 </ul>
 <hr>
-<p>Based on version 0.5.2</p>
+<p>Based on Yapbam version 0.6.2</p>
 </body></html>
