--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,11 +15,11 @@
 
 </style></head>
 <body>
-<h1>Version 0.6.3 (04/??/2010)</h1>
+<h1>Version 0.6.3 (04/24/2010)</h1>
 <h2>New in this version</h2>
 <ul>
   <li><span class="bugFix">Fixes a bug : </span>The selected date in the balance 
-    history panel was often reset to today. </li>
+    history panel was often reset to today.</li><li>Updates the installation instructions.</li>
 </ul>
 <h1>Older releases</h1>
 <h2>Version 0.6.2 (04/09/2010)</h2>
