--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,12 +16,12 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.3 (??/04/2010)</h1>
+<h1>Version 0.6.3 (24/04/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug : </span>La date s&eacute;lectionn&eacute;e 
-    dans l'onglet d'historique des soldes &eacute;taient fr&eacute;quemment remise 
-    &agrave; la date du jour.</li>
+  <li><span class="bugFix">Correction d'un bug : </span>La date sélectionnée 
+    dans l'onglet d'historique des soldes étaient fréquemment remise 
+    à la date du jour.</li><li>Mise à jour des instructions d'installation.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
