Fixes bug : Account initial balance was broken

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,16 +16,16 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.3 (24/04/2010)</h1>
+<h1>Version 0.6.4 (??/04/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug : </span>La date sélectionnée 
-    dans l'onglet d'historique des soldes étaient fréquemment remise 
-    à la date du jour.</li><li>Mise à jour des instructions d'installation.</li>
+  <li><span class="bugFix">Correction d'un bug : </span>L'édition du solde initial dans l'onglet d'administration des comptes ne fonctionnait plus.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.6.2 (09/04/2010)</h2>
+<h2>Version 0.6.3 (24/04/2010)</h2><ul><li><span class="bugFix">Correction d'un bug : </span>La date sélectionnée 
+    dans l'onglet d'historique des soldes étaient fréquemment remise 
+    à la date du jour.</li><li>Mise à jour des instructions d'installation.</li></ul><h2>Version 0.6.2 (09/04/2010)</h2>
 <ul>
   <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques 
     sont en attente de génération.</li>
