--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,8 +15,12 @@
 
 </style></head>
 <body>
-<h1>Version 0.6.4 (04/??/2010)</h1>
-<h2>New in this version</h2><ul><li><span class="bugFix">Fixes a bug : </span>The initial balance editing in the account adminitsration panel was broken.</li></ul>
+<h1>Version 0.6.4 (05/??/2010)</h1>
+<h2>New in this version</h2><ul><li>Improves the balance alert: Each account can have two balance thresholds. An alert is displayed in the balance history view
+whenever the balance is not between these values.</li><li>Improves the balance history pane:</li><ul><li>Add a button to set the selected date to today.</li><li>Add
+a menu that lists the balance alerts. Selecting an alert sets up the
+filter in order to view the balance history of the account on which the
+alert occurs. </li></ul><li><span class="bugFix">Fixes a bug : </span>The initial balance editing in the account adminitsration panel was broken.</li><li><span class="bugFix">Fixes some bugs</span> in peridical transaction generation:</li><ul><li>When the generated transactions were edited during their generation, changes where ignored.</li><li>There were many problems with periodical transaction with an end date.</li></ul></ul>
 <ul></ul>
 <h1>Older releases</h1>
 <h2>Version 0.6.3 (04/24/2010)</h2><ul><li><span class="bugFix">Fixes a bug : </span>The selected date in the balance 
