--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,10 +16,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.4 (??/04/2010)</h1>
+<h1>Version 0.6.4 (??/05/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug : </span>L'édition du solde initial dans l'onglet d'administration des comptes ne fonctionnait plus.</li>
+  <li>Amélioration des alertes sur les soldes : A présent, on
+peut définir, pour chaque compte deux seuils. Une alerte est affichée dans l'historique du solde
+lorsque celui-ci n'est pas compris entre ces bornes.</li><li>Amélioration de l'historique du solde :</li><ul><li>Ajout d'un bouton pour régler la date sélectionnée à aujourd'hui.</li><li>Ajout
+d'un menu listant les alertes sur le solde. La sélection d'une alerte
+règle le filtre de manière à visualiser l'historique du compte
+concerné. </li></ul><li><span class="bugFix">Correction d'un bug : </span>L'édition du solde initial dans l'onglet d'administration des comptes ne fonctionnait plus.</li><li><span class="bugFix">Correction de plusieurs bugs</span> dans la génération des opérations périodiques :</li><ul><li>Quand les opérations étaient éditées durant la phase de génération, les changements faits étaient &nbsp;ignorés.</li><li>Les opérations avec une date d'expiration ne fonctionnaient pas correctement.</li></ul>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
