--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,38 +16,82 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.6.4 (16/05/2010)</h1>
+<h1>Version 0.6.5 (??/08/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li>Amélioration des alertes sur les soldes : A présent, on
-peut définir, pour chaque compte deux seuils. Une alerte est affichée dans l'historique du solde
-lorsque celui-ci n'est pas compris entre ces bornes.</li><li>Amélioration de l'historique du solde :</li><ul><li>Ajout d'un bouton pour régler la date sélectionnée à aujourd'hui.</li><li>Ajout
-d'un menu listant les alertes sur le solde. La sélection d'une alerte
-règle le filtre de manière à visualiser l'historique du compte
-concerné. </li></ul><li><span class="bugFix">Correction d'un bug : </span>L'édition du solde initial dans l'onglet d'administration des comptes ne fonctionnait plus.</li><li><span class="bugFix">Correction de plusieurs bugs</span> dans la génération des opérations périodiques :</li><ul><li>Quand les opérations étaient éditées durant la phase de génération, les changements faits étaient &nbsp;ignorés.</li><li>Les opérations avec une date d'expiration ne fonctionnaient pas correctement.</li></ul><li><span class="bugFix">Correction d'un bug</span> mineur dans la mise à jour de l'apparence du menu "Filtre".</li>
+<li><span class="bugFix">Correction</span> de la bulle d'aide du panneau
+contenant la liste des opérations.</li><li><span class="bugFix">Corrections de
+bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li></ul>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version 0.6.3 (24/04/2010)</h2><ul><li><span class="bugFix">Correction d'un bug : </span>La date sélectionnée 
-    dans l'onglet d'historique des soldes étaient fréquemment remise 
-    à la date du jour.</li><li>Mise à jour des instructions d'installation.</li></ul><h2>Version 0.6.2 (09/04/2010)</h2>
+<h2>Version 0.6.4 (16/05/2010)</h2>
 <ul>
-  <li>Ajout d'une alerte dans la liste des opérations lorsque des opérations périodiques 
-    sont en attente de génération.</li>
-  <li>Meilleure intégration à l'environnement Microsoft Windows (Ajout de l'application 
-    Yapbam.exe).</li>
+<li>Amélioration des alertes sur les soldes : A présent, on
+peut définir, pour chaque compte deux seuils. Une alerte est affichée
+dans l'historique du solde
+lorsque celui-ci n'est pas compris entre ces bornes.</li>
+<li>Amélioration de l'historique du solde :</li>
+<ul>
+<li>Ajout d'un bouton pour régler la date sélectionnée à
+aujourd'hui.</li>
+<li>Ajout
+d'un menu listant les alertes sur le solde. La sélection d'une alerte
+règle le filtre de manière à visualiser l'historique du compte
+concerné. </li>
+</ul>
+<li><span class="bugFix">Correction d'un bug : </span>L'édition
+du solde initial dans l'onglet d'administration des comptes ne
+fonctionnait plus.</li>
+<li><span class="bugFix">Correction de plusieurs
+bugs</span> dans la génération des opérations périodiques :</li>
+<ul>
+<li>Quand les opérations étaient éditées durant la phase de
+génération, les changements faits étaient &nbsp;ignorés.</li>
+<li>Les opérations avec une date d'expiration ne
+fonctionnaient pas correctement.</li>
+</ul>
+<li><span class="bugFix">Correction d'un bug</span>
+mineur dans la mise à jour de l'apparence du menu "Filtre".</li>
+</ul>
+<h2>Version 0.6.3 (24/04/2010)</h2>
+<ul>
+<li><span class="bugFix">Correction d'un bug : </span>La
+date sélectionnée dans l'onglet d'historique des soldes étaient
+fréquemment remise à la date du jour.</li>
+<li>Mise à jour des instructions d'installation.</li>
+</ul>
+<h2>Version 0.6.2 (09/04/2010)</h2>
+<ul>
+<li>Ajout d'une alerte dans la liste des opérations lorsque des
+opérations périodiques sont en attente de génération.</li>
+<li>Meilleure intégration à l'environnement Microsoft Windows
+(Ajout de l'application Yapbam.exe).</li>
 </ul>
 <h2>Version&nbsp;0.6.1 (02/04/2010)</h2>
-<ul><li>Ajout de la gestion des chéquiers.</li><li>Ajout de menus d'accès direct aux ressources web de Yapbam&nbsp;(Le site 
-    de Yapbam et la page de support).</li><li>Améliore la vitesse de lancement (L'application démarre sans attendre la 
-    fin de la vérification de l'existence d'une nouvelle version).</li><li>Améliore le processus de recherche des mises à jour (La vérification peut-être 
-    interrompue si la connexion prend trop de temps).</li><li>Améliore l'écran d'administration des comptes.</li><li>Améliore la saisie des entiers (A présent seuls des caractères numériques 
-    peuvent être saisis et les flèches haute et basse augmentent ou diminuent 
-    la valeur contenue dans le champ).</li><li>Simplifie le dialogue de création de compte. Des utilisateurs ont rapporté 
-    que la possibilité de définir des modes dans cet écran était perturbant.</li><li>A l'arrivée dans l'historique du solde, positionne le graphique de 
-    façon à ce que la date sélectionnnée soit visible.</li><li><span class="bugFix">Correction d'un bug</span> : Yapbam avait un comportement 
-    étrange quand une date était saisie avec l'année sur un seul caractère (ex 
-    : 20/3/9).</li></ul><h2>Version&nbsp;0.6.0 (09/03/2010)</h2>
+<ul>
+<li>Ajout de la gestion des chéquiers.</li>
+<li>Ajout de menus d'accès direct aux ressources web de
+Yapbam&nbsp;(Le site de Yapbam et la page de support).</li>
+<li>Améliore la vitesse de lancement (L'application démarre
+sans attendre la fin de la vérification de l'existence d'une nouvelle
+version).</li>
+<li>Améliore le processus de recherche des mises à jour (La
+vérification peut-être interrompue si la connexion prend trop de temps).</li>
+<li>Améliore l'écran d'administration des comptes.</li>
+<li>Améliore la saisie des entiers (A présent seuls des
+caractères numériques peuvent être saisis et les flèches haute et basse
+augmentent ou diminuent la valeur contenue dans le champ).</li>
+<li>Simplifie le dialogue de création de compte. Des
+utilisateurs ont rapporté que la possibilité de définir des modes dans
+cet écran était perturbant.</li>
+<li>A l'arrivée dans l'historique du solde, positionne le
+graphique de façon à ce que la date sélectionnnée soit visible.</li>
+<li><span class="bugFix">Correction d'un bug</span>
+: Yapbam avait un comportement étrange quand une date était saisie avec
+l'année sur un seul caractère (ex : 20/3/9).</li>
+</ul>
+<h2>Version&nbsp;0.6.0 (09/03/2010)</h2>
 <ul>
 <li>Ajoute la possibilité d'importer/exporter vers des fichiers
 texte.</li>
@@ -68,7 +112,8 @@ des sous-opération, il apparaissait un complément de montant nul</li>
 <ul>
 <li>Traduction en portugais (Merci à Marco).</li>
 <li><span class="bugFix">Correction
-d'un bug</span> entrainant la suppression du fichier de données lors de la
+d'un bug</span> entrainant la suppression du fichier de données
+lors de la
 sauvegarde sur certaines configurations Linux.</li>
 <li>Ajout d'une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci complète les descriptions
