--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -4,65 +4,160 @@
 
 <style type="text/css">
 .bugFix {
-  color: #009900;
+color: #009900;
 }
 .beAware {
-  color: #aa0000;
+color: #aa0000;
 }
 .develop {
-  color: #ff9900;
+color: #ff9900;
 }
-
-</style></head>
+</style>
+</head>
 <body>
-<h1>Version 0.6.4 (05/16/2010)</h1>
-<h2>New in this version</h2><ul><li>Improves the balance alert: Each account can have two balance thresholds. An alert is displayed in the balance history view
-whenever the balance is not between these values.</li><li>Improves the balance history pane:</li><ul><li>Add a button to set the selected date to today.</li><li>Add
+<h1>Version 0.6.5 (08/??/2010)</h1>
+<h2>New in this version</h2>
+<ul>
+<li><span class="bugFix">Fixes&nbsp;</span>the
+transactions list panel's tooltip.</li>
+<li><span class="bugFix">Fixes some bugs</span> in
+balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li></ul>
+</ul>
+<ul>
+</ul>
+<h1>Older releases</h1>
+<h2>Version 0.6.4 (05/16/2010)</h2>
+<ul>
+<li>Improves the balance alert: Each account can have two
+balance thresholds. An alert is displayed in the balance history view
+whenever the balance is not between these values.</li>
+<li>Improves the balance history pane:</li>
+<ul>
+<li>Add a button to set the selected date to today.</li>
+<li>Add
 a menu that lists the balance alerts. Selecting an alert sets up the
 filter in order to view the balance history of the account on which the
-alert occurs. </li></ul><li><span class="bugFix">Fixes a bug : </span>The initial balance editing in the account administration panel was broken.</li><li><span class="bugFix">Fixes some bugs</span> in periodical transaction generation:</li><ul><li>When the generated transactions were edited during their generation, changes where ignored.</li><li>There were many problems with periodical transaction with an end date.</li></ul><li><span class="bugFix">Fixes minor bug</span> in the "Filter" menu refresh.</li></ul>
-<ul></ul>
-<h1>Older releases</h1>
-<h2>Version 0.6.3 (04/24/2010)</h2><ul><li><span class="bugFix">Fixes a bug : </span>The selected date in the balance 
-    history panel was often reset to today.</li><li>Updates the installation instructions.</li></ul><h2>Version 0.6.2 (04/09/2010)</h2>
+alert occurs. </li>
+</ul>
+<li><span class="bugFix">Fixes a bug : </span>The
+initial balance editing in the account administration panel was broken.</li>
+<li><span class="bugFix">Fixes some bugs</span>
+in periodical transaction generation:</li>
 <ul>
-  <li>Adds an alert in the transactions panel when some periodical transactions 
-    have to be generated.</li>
-  <li>Better integration with Microsoft Windows (introduces the Yapbam.exe application).</li>
+<li>When the generated transactions were edited during their
+generation, changes where ignored.</li>
+<li>There were many problems with periodical transaction with
+an end date.</li>
+</ul>
+<li><span class="bugFix">Fixes minor bug</span>
+in the "Filter" menu refresh.</li>
+</ul>
+<h2>Version 0.6.3 (04/24/2010)</h2>
+<ul>
+<li><span class="bugFix">Fixes a bug : </span>The
+selected date in the balance history panel was often reset to today.</li>
+<li>Updates the installation instructions.</li>
+</ul>
+<h2>Version 0.6.2 (04/09/2010)</h2>
+<ul>
+<li>Adds an alert in the transactions panel when some
+periodical transactions have to be generated.</li>
+<li>Better integration with Microsoft Windows (introduces the
+Yapbam.exe application).</li>
 </ul>
 <h2>Version 0.6.1 (04/02/2010)</h2>
-<ul><li>Adds checkbook management.</li><li>Adds access to web resources (Yapbam site and Yapbam support page).</li><li>Improves launch speed (The launch don't wait anymore for the "new release 
-    check" to finish).</li><li>Improves the check for updates process (this check can now be interrupted 
-    if the connection takes too long).</li><li>Improves the account&nbsp;administration screen.</li><li>Improves integer field input (now only numerical characters can be typed 
-    in such fields and up and down arrows respectively increase or decrease the 
-    field value).</li><li>Simplifies account creation dialog. Users report that the ability to add 
-    payment modes in this screen was confusing.</li><li>Autoscrolls the balance history view to always have the selected date visible 
-    when this panel appears.</li><li><span class="bugFix">Fixes a bug</span> : Yapbam had a 'strange' behavior 
-    when dates where entered using a 1 digit year format (for instance 03/20/9).</li></ul><h2>Version 0.6.0 (03/09/2010)</h2><ul><li>Adds text file import/export capabilities.</li><li>Adds an alert icon to the balance history tab when there is a negative balance period in the future.</li><li>Improves date fields behaviour.</li><li><span class="bugFix">Fixes</span> a bug in the auto-complete wizard that sometimes failed to deduce the paiement mode.</li><li><span class="bugFix">Fixes</span>&nbsp;a
+<ul>
+<li>Adds checkbook management.</li>
+<li>Adds access to web resources (Yapbam site and Yapbam
+support page).</li>
+<li>Improves launch speed (The launch don't wait anymore for
+the "new release check" to finish).</li>
+<li>Improves the check for updates process (this check can now
+be interrupted if the connection takes too long).</li>
+<li>Improves the account&nbsp;administration screen.</li>
+<li>Improves integer field input (now only numerical characters
+can be typed in such fields and up and down arrows respectively
+increase or decrease the field value).</li>
+<li>Simplifies account creation dialog. Users report that the
+ability to add payment modes in this screen was confusing.</li>
+<li>Autoscrolls the balance history view to always have the
+selected date visible when this panel appears.</li>
+<li><span class="bugFix">Fixes a bug</span>
+: Yapbam had a 'strange' behavior when dates where entered using a 1
+digit year format (for instance 03/20/9).</li>
+</ul>
+<h2>Version 0.6.0 (03/09/2010)</h2>
+<ul>
+<li>Adds text file import/export capabilities.</li>
+<li>Adds an alert icon to the balance history tab when there is
+a negative balance period in the future.</li>
+<li>Improves date fields behaviour.</li>
+<li><span class="bugFix">Fixes</span> a bug
+in the auto-complete wizard that sometimes failed to deduce the
+paiement mode.</li>
+<li><span class="bugFix">Fixes</span>&nbsp;a
 bug in the transactions table. Sometimes transactions with
 subtransactions appeared with a complement that had an amount equals to
-zero</li></ul><h2>Version 0.5.4 (02/08/2010)</h2><ul><li>Portuguese translation (Thank's to Marco).</li><li><span class="bugFix">Fixes</span> a bug that deleted data files while saving under some Linux configurations.</li><li>Adds an auto-complete wizard in the "new transaction"
-dialog that completes the description as you type and
-deduces the category and payment mode.</li></ul><h2>Version 0.5.3 (01/25/2010)</h2><ul><li>Currency converter Portuguese translation (Thank's to Marco)</li><li><span class="bugFix">Fixes</span>
-a lot of mistakes in english wording (Thank's to Sharada)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul><h2>Version 0.5.2 (01/21/2010)</h2><ul><li>Adds ability to edit payment modes.</li></ul><h2>Version 0.5.1 (01/17/2010)</h2>
-<ul>
-<li>Adds transactions printing (feature requested by users).</li><li>Add a button in the transactions table to show/hide all the subtransactions.</li>
+zero</li>
 </ul>
-<h2>Version 0.5.0 (01/10/2010)</h2><ul><li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
+<h2>Version 0.5.4 (02/08/2010)</h2>
+<ul>
+<li>Portuguese translation (Thank's to Marco).</li>
+<li><span class="bugFix">Fixes</span> a bug
+that deleted data files while saving under some Linux configurations.</li>
+<li>Adds an auto-complete wizard in the "new transaction"
+dialog that completes the description as you type and
+deduces the category and payment mode.</li>
+</ul>
+<h2>Version 0.5.3 (01/25/2010)</h2>
+<ul>
+<li>Currency converter Portuguese translation (Thank's to Marco)</li>
+<li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording (Thank's to Sharada)</li>
+<li>Adds the ability to show/hide columns in the transactions
+table.</li>
+</ul>
+<h2>Version 0.5.2 (01/21/2010)</h2>
+<ul>
+<li>Adds ability to edit payment modes.</li>
+</ul>
+<h2>Version 0.5.1 (01/17/2010)</h2>
+<ul>
+<li>Adds transactions printing (feature requested by users).</li>
+<li>Add a button in the transactions table to show/hide all the
+subtransactions.</li>
+</ul>
+<h2>Version 0.5.0 (01/10/2010)</h2>
+<ul>
+<li>Adds a budget view (it seems users really want it).</li>
+<li>Adds a preference panel to configure
 the balance report fields colors (some users reported the positive
-balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
-In statistic panel, sometimes, some transactions that would have been rejected by the filter were not.</li></ul><h2>Version 0.4.0 (01/03/2010)</h2><ul><li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
-capabilities (on category, modes, etc ...).</li><li><span class="bugFix">Fixes</span>
-a lot of mistakes in english wording. Fixes some missing tooltips.</li><li><span class="bugFix">Bug fixed</span> :
+balance were quite illegible).</li>
+<li><span class="bugFix">Bug fixed</span> :
+In statistic panel, sometimes, some transactions that would have been
+rejected by the filter were not.</li>
+</ul>
+<h2>Version 0.4.0 (01/03/2010)</h2>
+<ul>
+<li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
+capabilities (on category, modes, etc ...).</li>
+<li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording. Fixes some missing tooltips.</li>
+<li><span class="bugFix">Bug fixed</span> :
 Sometimes, the next date of a periodical transaction was not updated
-after generating an occurence of this transaction.</li><li><span class="bugFix">Bug fixed</span> :
+after generating an occurence of this transaction.</li>
+<li><span class="bugFix">Bug fixed</span> :
 The currency converter tool didn't work under Ubuntu (and probably
-other Linux systems).</li><li><span class="bugFix">Bug fixed</span>
+other Linux systems).</li>
+<li><span class="bugFix">Bug fixed</span>
 :
 The currency converter tool was very, very slow when European Central
 Bank did not refresh its rates for more than one day (for instance when
-it's new year's day).</li><li><span class="bugFix">Bug fixed</span> :
-Sometimes, it was impossible to change the account of a transaction.</li></ul><h2>Version 0.3.7 (12/05/2009)</h2>
+it's new year's day).</li>
+<li><span class="bugFix">Bug fixed</span> :
+Sometimes, it was impossible to change the account of a transaction.</li>
+</ul>
+<h2>Version 0.3.7 (12/05/2009)</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Dates can now be selected in a
 calendar.</li>
