--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -21,7 +21,7 @@ color: #ff9900;
 <ul>
 <li><span class="bugFix">Correction</span> de la bulle d'aide du panneau
 contenant la liste des opérations.</li><li><span class="bugFix">Corrections de
-bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li><li>Parfois, en particulier lors du pointage, des alertes&nbsp;erronnées apparaissaient.</li></ul>
+bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li><li>Parfois, en particulier lors du pointage, des alertes&nbsp;erronnées apparaissaient.</li></ul><li>Ajout d'un message de confirmation lorsque l'on sauve les données dans un fichier déjà existant.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
