--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -20,7 +20,7 @@ color: #ff9900;
 <li><span class="bugFix">Fixes&nbsp;</span>the
 transactions list panel's tooltip.</li>
 <li><span class="bugFix">Fixes some bugs</span> in
-balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li><li>Sometimes, erroneous balance alerts poped up.</li></ul><li>Add a confirm dialog when the user save data in an existing file.</li>
+balance history pane:</li><ul><li>Sometimes, today was not visible in the window.</li><li>Sometimes, erroneous balance alerts poped up.</li></ul><li>Add a confirm dialog when the user save data in an existing file.</li><li><span class="bugFix">Fixes a bug</span> that prevents the import error dialog to be displayed sometimes.</li>
 </ul>
 <ul>
 </ul>
