--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -21,7 +21,12 @@ color: #ff9900;
 <ul>
 <li><span class="bugFix">Correction</span> de la bulle d'aide du panneau
 contenant la liste des opérations.</li><li><span class="bugFix">Corrections de
-bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li><li>Parfois, en particulier lors du pointage, des alertes&nbsp;erronnées apparaissaient.</li></ul><li>Ajout d'un message de confirmation lorsque l'on sauve les données dans un fichier déjà existant.</li><li><span class="bugFix">Correction d'un bug</span> qui empéchait le compte rendu des erreurs d'importation de s'afficher dans certains cas.</li>
+bugs</span> dans l'onglet d'historique du solde :</li><ul><li>Parfois, la date courante n'était pas visible dans la fenêtre.</li><li>Parfois, en particulier lors du pointage, des alertes&nbsp;erronnées apparaissaient.</li></ul><li>Ajout d'un message de confirmation lorsque l'on sauve les données dans un fichier déjà existant.</li><li>Amélioration dans l'importation :</li><ul><li>Les
+réglages de l'importation (colonnes importées, séparateur, etc...) sont
+mémorisés. Vous les retrouvez lorsque vous réouvrez le dialogue
+d'importation.</li><li>Le décodage des montants est plus strict
+(Auparavant, "52g32" était décodé comme un montant de 52. A présent, la
+ligne est considérée comme une erreur).</li></ul><ul><li><span class="bugFix">Correction d'un bug</span> qui empéchait le compte rendu des erreurs d'importation de s'afficher dans certains cas.</li></ul>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
