--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -30,7 +30,8 @@ balance history pane:</li>
 file.</li>
 <li>File import improvements:</li>
 <ul>
-<li>Import settings (imported columns, column separator,
+<li><span class="bugFix">Fixes a bug</span>
+that prevents the import error dialog to be displayed sometimes.</li><li>In the error dialog, you now have the choice to cancel the import or to process only lines without error. Fields with errors are now displayed in red to help identifying them.</li><li>Import settings (imported columns, column separator,
 etc...) are now kept in memory, you retrieve them if you import again. </li>
 </ul>
 <ul>
@@ -38,10 +39,7 @@ etc...) are now kept in memory, you retrieve them if you import again. </li>
 amount string of "52g32" results in an transaction with an amount of
 52. Now the line is reported as an error).</li>
 </ul>
-<ul>
-<li><span class="bugFix">Fixes a bug</span>
-that prevents the import error dialog to be displayed sometimes.</li>
-</ul>
+
 </ul>
 <ul>
 </ul>
